[project]
name = "sweet-tokens"
version = "0.1.0"
description = ""
authors = [
    {name = "volbil"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "alembic (>=1.16.1,<2.0.0)",
    "aiohttp (>=3.12.13,<4.0.0)",
    "dynaconf (>=3.2.11,<4.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "greenlet (>=3.2.3,<4.0.0)"
]


[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 80
exclude = [".venv", "venv", "alembic"]

[tool.ruff.lint]
extend-ignore = [
    "F821",  # Disable checks for annotated SQLAlchemy relations 
]
